--- a/_quarto.yml
+++ b/_quarto.yml
@@ -75,4 +75,4 @@ format:
     appendix-cite-as: display
     link-external-newwindow: true
     output-file: index
-  polyu-thesis-pdf: default
+  tongji-thesis-pdf: default
