--- a/_quarto.yml
+++ b/_quarto.yml
@@ -75,4 +75,5 @@ format:
     appendix-cite-as: display
     link-external-newwindow: true
     output-file: index
-  tongji-thesis-pdf: default
+  tongji-thesis-pdf:
+    keep-tex: true
