--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,39 @@
 .DS_Store
 
+# Quarto outputs files
 /.quarto/
+/_book/
+/_site/
+/docs/
+/node_modules/
 /outputs/
-/.luarc.json
-/*.jpg
-/*.png
+/paper_files/
+/releases/*/*.xml
+/releases/*/*.zip
+/releases/*/_tex/
+/releases/*/site_libs/
+/site_libs/
+/template_files/
 /*.aux
 /*.bcf
+/*.bst
 /*.cfg
 /*.cls
+/*.docx
+/*.jpg
 /*.lof
-/*.lot
 /*.log
+/*.lot
 /*.pdf
+/*.png
 /*.sty
 /*.tex
 /*.thm
 /*.toc
-/*.xml
-template_files/
+*.html
+*.json
+*.pag
+*.spl
+*.otf
+*.ttf
+*.xml
