--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
   repo-actions: [edit, issue]
   search: true
   downloads: [pdf, docx]
+  output-file: index
   navbar:
     search: true
   chapters:
@@ -77,3 +78,4 @@ format:
     output-file: index
   tongji-thesis-pdf:
     keep-tex: true
+    output-file: index
