--- a/_extensions/tongji-thesis/_extension.yml
+++ b/_extensions/tongji-thesis/_extension.yml
@@ -5,6 +5,7 @@ quarto-required: ">=1.6.0"
 contributes:
   formats:
     pdf:
+      toc: false
       include-in-header:
         - text: |
             \usepackage{tongjiutils}
