--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -30,9 +30,12 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 1.6.39
-          tinytex: true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install tinytex
+        run: |
+          quarto install tinytex --update-path
 
       - name: Setup pandoc
         uses: pandoc/actions/setup@v1
@@ -50,7 +53,7 @@ jobs:
           force_orphan: true
 
   diff:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -62,22 +65,30 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 1.6.39
-          tinytex: true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install tinytex
+        run: |
+          quarto install tinytex --update-path
+
       - name: Get the latest version and current short sha
+        shell: bash
         run: |
           echo "version=$(cat releases/VERSION || echo '')" >> $GITHUB_ENV
           echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
+      - name: Install texlive packages
+        if: env.version != ''
+        run: |
+          tlmgr install latexdiff
+
       - name: Build diff for the latest changes
         if: env.version != ''
+        shell: bash
         run: |
           if [ -d "releases/$version" ]; then
             echo "latexdiff=true" >> $GITHUB_ENV
-            sudo apt update
-            sudo apt install -y latexdiff texlive-latex-extra texlive-xetex texlive-publishers texlive-lang-chinese texlive-bibtex-extra texlive-fonts-extra
 
             make release-$sha
             make diff previous=$version current=$sha
