--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ book:
   repo-actions: [edit, issue]
   search: true
   downloads: [pdf, docx]
-  output-file: index
+  output-file: tongji-thesis
   navbar:
     search: true
   chapters:
@@ -69,13 +69,14 @@ resume: 简历
 bibliography: bibliography.bib
 
 format:
-  docx: default
+  docx:
+    output-file: tongji-thesis
   html:
     toc: true
     code-fold: true
     appendix-cite-as: display
     link-external-newwindow: true
-    output-file: index
+    output-file: tongji-thesis
   tongji-thesis-pdf:
     keep-tex: true
-    output-file: index
+    output-file: tongji-thesis
