--- a/_quarto.yml
+++ b/_quarto.yml
@@ -72,6 +72,7 @@ format:
   docx:
     output-file: tongji-thesis
   html:
+    theme: cosmo
     toc: true
     code-fold: true
     appendix-cite-as: display
