--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 /*.cfg
 /*.cls
 /*.docx
+/*.fdb_latexmk
+/*.fls
+/*.gz
 /*.jpg
 /*.lof
 /*.log
@@ -39,3 +42,25 @@
 *.otf
 *.ttf
 *.xml
+
+/releases/*/*.aux
+/releases/*/*.bbl
+/releases/*/*.bcf
+/releases/*/*.blg
+/releases/*/*.bst
+/releases/*/*.cfg
+/releases/*/*.cls
+/releases/*/*.docx
+/releases/*/*.fdb_latexmk
+/releases/*/*.fls
+/releases/*/*.gz
+/releases/*/*.jpg
+/releases/*/*.lof
+/releases/*/*.log
+/releases/*/*.lot
+/releases/*/*.pdf
+/releases/*/*.png
+/releases/*/*.sty
+/releases/*/*.tex
+/releases/*/*.thm
+/releases/*/*.toc
